<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/new_login_gradients">

    <ImageView
        android:layout_width="268dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:padding="16dp"
        android:src="@drawable/ic_person_black_24dp" />

    <EditText
        android:id="@+id/txtName"
        android:layout_width="385dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/ic_person_black_24dp"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="Name"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:singleLine="true" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="385dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/ic_person_black_24dp"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:singleLine="true" />

    <EditText
        android:id="@+id/txtcontact"
        android:layout_width="385dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/ic_person_black_24dp"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="Contact"
        android:inputType="textPhonetic"
        android:maxLines="1"
        android:singleLine="true" />

    <EditText
        android:id="@+id/txtpassword"
        android:layout_width="385dp"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/ic_lock_white_24dp"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/prompt_password"
        android:imeActionId="6"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true" />

    <EditText
        android:id="@+id/txtaddress"
        android:layout_width="390dp"
        android:layout_height="104dp"
        android:layout_marginTop="4dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/ic_home_black_24dp"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="Address"
        android:imeActionId="6"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:inputType="textPostalAddress"
        android:maxLines="1"
        android:singleLine="true" />

    <Button
        android:id="@+id/btnLogin"
        style="@style/Base.TextAppearance.AppCompat.Body1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_signup"
        android:onClick="submit"
        android:text="Ceate Account" />

    <TextView
        android:id="@+id/lnkLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:onClick="test"
        android:text="Already Registered? Login here"
        android:textColor="#3F51B5"
        android:textSize="20dp" />

    <Button
        android:id="@+id/btnLogin2"
        style="@style/Base.TextAppearance.AppCompat.Body1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/background_login"
        android:text="Login"
        android:onClick="login1"/>


</LinearLayout>

