<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main">

    <FrameLayout
        android:id="@+id/screen_area"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></FrameLayout>
    <ViewFlipper
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/v_flipper"
        tools:ignore="MissingConstraints" />

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="200dp">
        tools:context=".MainActivity"
        android:background="#fcfcfc">
            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsingtoolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_scrollFlags="snapMargins|scroll"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleMargin="48dp"
                app:expandedTitleMarginEnd="64dp">
                <android.support.v7.widget.Toolbar
                    android:id="@+id/mynewtoolbar"
                    android:layout_width="match_parent"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                    app:layout_collapseMode="pin"
                    android:layout_height="?attr/actionBarSize"
                    >



                </android.support.v7.widget.Toolbar>

            </android.support.design.widget.CollapsingToolbarLayout>

        <android.support.v4.widget.NestedScrollView


            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:rowCount="4"
            android:columnCount="2"
            android:gravity="center"
            android:id="@+id/ll">

        <android.support.v7.widget.CardView
            android:elevation="@dimen/text_margin"
            app:cardCornerRadius="@dimen/my_margin"

            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:id="@+id/almondcardId"
            android:layout_marginLeft="30dp"
            android:layout_width="160dp"
            android:layout_height="190dp"
            android:layout_margin="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@color/colorSecondary"
                android:gravity="center">
                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"

                    android:src="@drawable/almond"
                    android:padding="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:text="@string/almonds"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"

                    android:layout_margin="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/almonds"
                    android:padding="5dp"
                    android:textColor="@android:color/darker_gray"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:elevation="@dimen/text_margin"
            app:cardCornerRadius="@dimen/my_margin"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"

            android:id="@+id/coconutcardId"
            android:layout_marginLeft="25dp"
            android:layout_width="160dp"
            android:layout_height="190dp"
            android:layout_margin="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@color/colorSecondary"
                android:gravity="center">
                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"

                    android:src="@drawable/coconut"
                    android:padding="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:text="@string/coconut"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"

                    android:layout_margin="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/coconut"
                    android:padding="5dp"
                    android:textColor="@android:color/darker_gray"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:elevation="@dimen/text_margin"
            app:cardCornerRadius="@dimen/my_margin"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:id="@+id/penautcardId"
            android:layout_marginLeft="30dp"
            android:layout_width="160dp"
            android:layout_height="190dp"

            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@color/colorSecondary"
                android:gravity="center">
                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"

                    android:src="@drawable/penaut"
                    android:padding="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:text="@string/peanut"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"

                    android:layout_margin="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/peanut"
                    android:padding="5dp"
                    android:textColor="@android:color/darker_gray"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:elevation="@dimen/text_margin"
            app:cardCornerRadius="@dimen/my_margin"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:id="@+id/sunflowercardId"
            android:layout_marginLeft="25dp"
            android:layout_width="160dp"

            android:layout_height="190dp"
            android:layout_margin="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@color/colorSecondary"
                android:gravity="center">
                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"

                    android:src="@drawable/sunflower"
                    android:padding="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:text="@string/sunflower"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"

                    android:layout_margin="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/sunflower"
                    android:padding="5dp"
                    android:textColor="@android:color/darker_gray"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>
        </GridLayout>
    </android.support.v4.widget.NestedScrollView>




    </android.support.design.widget.CoordinatorLayout>

</RelativeLayout>
